@@ -1,5 +1,5 @@
 /*
-    Copyright 2007-2009, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2007-2016, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -66,13 +66,15 @@ namespace fostlib {
     };
 
 
-    struct json_parser : public boost::spirit::grammar< json_parser, detail::json_closure::context_t > {
-        json_parser() {}
+    struct json_embedded_parser :
+        public boost::spirit::grammar<json_embedded_parser, detail::json_closure::context_t>
+    {
+        json_embedded_parser() {}
 
         template< typename scanner_t >
         struct definition {
-            definition( json_parser const& self ) {
-                top = *boost::spirit::space_p >> json_r[ self.jvalue = phoenix::arg1 ] >> *boost::spirit::space_p;
+            definition(json_embedded_parser const& self) {
+                top = json_r[self.jvalue = phoenix::arg1];
 
                 json_r =
                         atom[ json_r.jvalue = phoenix::arg1 ]
@@ -122,12 +124,31 @@ namespace fostlib {
             }
             json_string_parser json_string_p;
 
-            boost::spirit::rule< scanner_t, json_closure::context_t >
+            boost::spirit::rule<scanner_t, json_closure::context_t>
                     json_r, object, array, atom, number, boolean, null;
-            boost::spirit::rule< scanner_t > top;
+            boost::spirit::rule<scanner_t> top;
 
-            boost::spirit::rule< scanner_t > const &start() const { return top; }
+            boost::spirit::rule<scanner_t> const &start() const { return top; }
        };
+    };
+
+
+    struct json_parser : boost::spirit::grammar<json_parser, detail::json_closure::context_t> {
+        json_parser() {}
+
+        template< typename scanner_t >
+        struct definition {
+            definition( json_parser const& self ) {
+                top =
+                    *boost::spirit::space_p
+                    >> json_r[self.jvalue = phoenix::arg1]
+                    >> *boost::spirit::space_p;
+            }
+            json_embedded_parser json_r;
+            boost::spirit::rule<scanner_t> top;
+
+            boost::spirit::rule<scanner_t> const &start() const { return top; }
+        };
     };
 
 
